--- a/css/news.css
+++ b/css/news.css
@@ -49,71 +49,6 @@ body::-webkit-scrollbar-thumb {
   text-align: center;
   font-size: xxx-large;
 }
-.news .news__home .box__container {
-  justify-content: center;
-  width: 100%;
-  display: flex;
-  align-items: start;
-  justify-content: center;
-  gap: 20px;
-}
-.news .newAndEvent-section .grid__container .box__grid-main {
-  flex-grow: 1;
-}
-.news .newAndEvent-section .grid__container .box__grid {
-  position: relative;
-  width: 25%;
-  height: fit-content;
-  border-top-left-radius: 14px;
-  border-top-right-radius: 14px;
-  overflow: hidden;
-  background: transparent;
-}
-.news .newAndEvent-section .grid__container .box__grid a {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__content {
-  text-overflow: ellipsis;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__content h3 {
-  color: black;
-  font-size: 1.15em;
-  text-overflow: ellipsis;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__content .box__date {
-  position: absolute;
-  padding: 10px 13px 20px;
-  background-color: #ed1c24;
-  top: 0;
-  color: #fff;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__content .box__date .date {
-  font-size: 35px;
-  font-weight: 700;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__content .box__date .month {
-  font-size: 10px;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__img {
-  height: 360px;
-  display: flex;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 14px;
-}
-.news .newAndEvent-section .grid__container .box__grid .box__img img {
-  object-fit: none;
-  width: 712px;
-  height: 397px;
-}
-.news .newAndEvent-section .grid__container .box__grid a:hover img {
-  transition: var(--animiation);
-  transform: rotate(-5deg) scale(1.2);
-}
 .news .newAndSale__section {
   width: 100%;
   display: flex;
@@ -170,150 +105,97 @@ body::-webkit-scrollbar-thumb {
   height: 100%;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 10px;
-}
-.news .newAndSale__section .newAndSale__container .list__news .news__box {
-  width: calc(50% - 10px);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 15px;
-}
-.news .news__home .box__container .list__option__scroll .list__option .option {
-  border: solid 1px;
-  padding: 15px 40px;
-  border-radius: 80px;
-  width: 25%;
-  text-align: center;
-  font-size: larger;
-  align-items: center;
-}
-.news .news__home .box__container .list__option__scroll .list__option .option:hover {
-  cursor: pointer;
-  color: red;
-  font-weight: bolder;
-}
-.news .news__home .box__container .list__news {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
   gap: 30px;
 }
-.news .news__home .box__container .list__news .news__box {
+.news .newAndSale__section .newAndSale__container .list__news .news__box {
   width: calc(50% - 20px);
   height: 50%;
   display: flex;
   flex-direction: row;
   gap: 20px;
 }
-.news .news__home .box__container .list__news .news__box .news__img {
+.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img {
   width: 300px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img .date__box {
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  background: #ed1c24;
+  padding: 10px 13px 20px;
+  border-radius: 10px 0px 0px 0px;
+  text-align: center;
+  line-height: 1;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img:hover {
+  cursor: pointer;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img:hover img {
+  width: 100%;
+  overflow: hidden;
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box .text__box {
+  width: 50%;
+  height: fit-content;
+  text-align: justify;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box:hover {
+  cursor: pointer;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__box:hover .news__img img {
+  width: 100%;
+  overflow: hidden;
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__img img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 15px;
+}
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .news__img {
+  border-radius: 14px;
+  height: inherit;
   position: relative;
   width: calc(50% - 5px);
   overflow: hidden;
 }
-.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img img {
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .news__img img {
   width: 110%;
   height: auto;
   object-fit: cover;
 }
-.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img .date__box {
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .news__img .date__box {
   position: absolute;
   padding: 10px 13px 20px;
   background-color: #ed1c24;
   top: 0;
   color: #fff;
 }
-.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img .date__box .date {
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .news__img .date__box .date {
   font-size: 15px;
   font-weight: 700;
 }
-.news .newAndSale__section .newAndSale__container .list__news .news__box .news__img .date__box .month {
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .news__img .date__box .month {
   font-size: 10px;
 }
-.news .news__home .box__container .list__news .news__box .text__box {
-  width: 50%;
-  height: fit-content;
-  text-align: justify;
-}
-.news .news__home .box__container .list__news .news__box:hover {
-  cursor: pointer;
-}
-.news .news__home .box__container .list__news .news__box:hover .news__img img {
-  width: 100%;
-  overflow: hidden;
-  transform: scale(1.1);
-  transition: all 0.5s ease;
-}
-.news .news__home .box__container .list__news .news__img img {
-  width: 100%;
-  height: 100%;
-}
-@media only screen and (max-width: 1000px) {
-  .news .news__home .box__container {
-    display: block;
-    padding-top: 40px;
-  }
-  .news .news__home .box__container .item__wrap {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .news .news__home .box__container .item__wrap #img1 {
-    width: 100%;
-    overflow: hidden;
-  }
-  .news .news__home .box__container .item__wrap #img2 {
-    width: 100%;
-    overflow: hidden;
-  }
-  .news .news__home .box__container .item__wrap #img3 {
-    width: 100%;
-    overflow: hidden;
-  }
-  .news .news__home .container .box__heading {
-    width: 100%;
-    padding: 0 0 30px;
-  }
-  .news .news__home .container .box__heading .heading__h2 {
-    font-size: 25px;
-  }
-  .news .news__home .container .box__heading .list__option__scroll {
-    overflow-x: scroll;
-    width: 100%;
-    white-space: nowrap;
-  }
-  .news .news__home .container .box__heading .list__option__scroll .list__option {
-    display: flex;
-    justify-content: start;
-    text-align: center;
-    gap: 10px;
-  }
-  .news .news__home .container .box__heading .list__option__scroll .list__option .option {
-    width: 100%;
-  }
-  .news .news__home .container .list__news {
-    display: flex;
-    flex-direction: column;
-  }
-  .news .news__home .container .list__news .news__box {
-    height: auto;
-    width: auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0;
-  }
-  .news .news__home .container .list__news .news__box .news__img {
-    width: auto;
-  }
-  .news .news__home .container .list__news .news__box .text__box {
-    width: auto;
-  }
+.news .newAndSale__section .newAndSale__container .list__news .news__img img .text__box {
+  width: calc(50% - 5px);
+  font-size: 80%;
 }
 .news .main__system {
   width: 100%;
@@ -533,6 +415,5 @@ body::-webkit-scrollbar-thumb {
   }
   .news .main__system .box__system .info__nav .result__container__all .result__container .result__box .arrow__btn {
     right: 25px;
-    top: 140px;
   }
-} /*# sourceMappingURL=news.css.map */
+}/*# sourceMappingURL=news.css.map */
