--- a/css/contact.css
+++ b/css/contact.css
@@ -193,12 +193,14 @@ main .contact-section .contact-container .wrap__dess .box__input .box__enter .it
   justify-content: start;
   flex-direction: column;
   margin-bottom: 20px;
+  padding: 0 10px;
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__enter .item label {
   font-size: 15px;
   margin-bottom: 10px;
 }
 main .contact-section .contact-container .wrap__dess .box__input .box__enter .item input {
+  width: 100%;
   border: 1px solid #d0d0d0;
   height: 45px;
   background: #ffffff;
@@ -247,6 +249,22 @@ main .contact-section .contact-container .wrap__dess .box__img {
   main .contact-section .contact-container .box__content h1 {
     margin-bottom: 40px;
     font-size: 35px;
+  }
+  main .contact-section .contact-container .wrap__dess {
+    height: 525px;
+  }
+  main .contact-section .contact-container .wrap__dess .box__input {
+    height: 100%;
+  }
+  main .contact-section .contact-container .wrap__dess .box__input .box__enter .item textarea {
+    width: 335px !important;
+  }
+  main .contact-section .contact-container .wrap__dess .box__img {
+    height: 100%;
+  }
+  main .contact-section .contact-container .wrap__dess .box__img img {
+    object-fit: cover;
+    height: 100%;
   }
 }
 @media only screen and (max-width: 1023px) {
