--- a/Sass/contact.scss
+++ b/Sass/contact.scss
@@ -150,7 +150,7 @@ main {
     }
   }
   .contact-section {
-    padding: 155px 0 90px;
+    padding: 0 0 288px;
     .contact-container {
       margin-left: auto;
       margin-right: auto;
@@ -244,6 +244,20 @@ main {
       }
     }
   }
+  .location-section {
+    .location-container {
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 10px;
+      padding-right: 10px;
+      max-width: 1200px;
+      height: auto;
+      text-align: center;
+      display: flex;
+      align-items: start;
+      justify-content: space-between;
+    }
+  }
 }
 @media only screen and (max-width: 1200px) {
   main {
@@ -289,11 +303,50 @@ main {
         display: none;
       }
     }
+    .centralOffice-section {
+      padding-bottom: 0px;
+    }
+    .contact-section {
+      .contact-container {
+        max-width: 960px;
+        .box__content {
+          h1 {
+            margin-bottom: 30px;
+            font-size: 25px;
+          }
+        }
+        .wrap__dess {
+          height: 712px;
+          .box__input {
+            height: 100%;
+            .box__enter {
+              flex-direction: column;
+              .item {
+                width: 100%;
+                label {
+                }
+                textarea {
+                  max-width: 100% !important;
+                }
+              }
+            }
+          }
+          .box__img {
+            height: 100%;
+            img {
+              object-fit: cover;
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
   }
 }
 @media only screen and (max-width: 767px) {
   main {
     .centralOffice-section {
+      padding-top: 60px;
       .centralOffice-container {
         max-width: 824px;
         .box__content {
@@ -307,10 +360,28 @@ main {
     .contact-section {
       .contact-container {
         max-width: 824px;
-        .box__content {
-          h1 {
-            margin-bottom: 30px;
-            font-size: 25px;
+        .wrap__dess {
+          height: fit-content;
+          flex-direction: column;
+          .box__input {
+            width: 100%;
+            padding: 30px;
+            .box__enter {
+              .item {
+                textarea {
+                  width: 100% !important;
+                }
+              }
+            }
+          }
+          .box__img {
+            width: 100%;
+            height: 100%;
+            img {
+              width: 100%;
+              object-fit: cover;
+              height: 100%;
+            }
           }
         }
       }
