--- a/Sass/contact.scss
+++ b/Sass/contact.scss
@@ -245,17 +245,110 @@ main {
     }
   }
   .location-section {
+    position: relative;
+    background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-2.png") no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 500px;
+    padding-bottom: 120px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
     .location-container {
+      position: absolute;
+      margin-top: -180px;
+
+      padding: 0 10px;
       margin-left: auto;
       margin-right: auto;
-      padding-left: 10px;
-      padding-right: 10px;
       max-width: 1200px;
       height: auto;
       text-align: center;
-      display: flex;
-      align-items: start;
-      justify-content: space-between;
+
+      .wrap__dess {
+        box-shadow: 10px 0px 25px rgba(3, 3, 3, 0.2);
+        background-color: #fff;
+        width: 100%;
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        overflow: hidden;
+        border-radius: 10px;
+        .wrap__map {
+          width: 50%;
+          .map {
+            width: 100%;
+          }
+        }
+        .wrap__desc {
+          padding: 61px 25px 40px 76px;
+          width: 50%;
+          .box__content {
+            h1 {
+              font-size: 30px;
+              margin-bottom: 20px;
+              text-align: start;
+            }
+          }
+
+          .box__ress {
+            display: flex;
+            flex-direction: column;
+            .item {
+              width: 100%;
+              display: flex;
+              h3 {
+                text-align: start;
+                width: 25%;
+                font-size: 16px;
+                margin-bottom: 20px;
+                line-height: 30px;
+              }
+              .content {
+                max-width: 234px;
+                p {
+                  text-align: justify;
+                  font-size: 14px;
+                  color: #231f20;
+                  margin-bottom: 1.5em;
+                  font-weight: 400;
+                  a {
+                  }
+                  a:hover {
+                    color: red;
+                    transition: var(--animiation);
+                  }
+                }
+              }
+            }
+            .box__btn {
+              width: 150px;
+              margin-top: 35px;
+              display: flex;
+              align-items: center;
+              justify-content: end;
+              border-radius: 30px;
+              gap: 10px;
+              padding: 5px 5px 5px 30px;
+              background: red;
+              color: #fff;
+              cursor: pointer;
+              .button__icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 15px;
+                height: 15px;
+                padding: 10px;
+                size: 10px;
+                background-color: #fff;
+                color: var(--mainRed);
+                border-radius: 50%;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -292,6 +385,11 @@ main {
             }
           }
         }
+      }
+    }
+    .location-section {
+      .location-container {
+        max-width: 960px;
       }
     }
   }
@@ -341,9 +439,22 @@ main {
         }
       }
     }
+    .location-section {
+      .location-container {
+        .wrap__dess {
+          .wrap__desc {
+            .box__content {
+              h1 {
+                font-size: 25px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 790px) {
   main {
     .centralOffice-section {
       padding-top: 60px;
@@ -381,6 +492,43 @@ main {
               width: 100%;
               object-fit: cover;
               height: 100%;
+            }
+          }
+        }
+      }
+    }
+    .location-section {
+      height: 825px;
+      .location-container {
+        max-width: 824px;
+        .wrap__dess {
+          flex-wrap: wrap;
+          .wrap__map {
+            width: 100%;
+          }
+          .wrap__desc {
+            width: 100%;
+            padding: 30px;
+            .box__content {
+              h1 {
+                margin-bottom: 30px;
+                font-size: 25px;
+              }
+            }
+            .box__ress {
+              .item + .item {
+                border-top: 1px solid #bbbbbb;
+              }
+              .item {
+                h3 {
+                  margin-bottom: 10px;
+                }
+                .content {
+                  p {
+                    margin-bottom: 10px;
+                  }
+                }
+              }
             }
           }
         }
