--- a/css/contact.css
+++ b/css/contact.css
@@ -241,17 +241,105 @@ main .contact-section .contact-container .wrap__dess .box__input .box__btn .butt
 main .contact-section .contact-container .wrap__dess .box__img {
   width: 50%;
 }
+main .location-section {
+  position: relative;
+  background: url("https://mathnasium.edu.vn/wp-content/uploads/2022/11/Group-18867-2.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 500px;
+  padding-bottom: 120px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
 main .location-section .location-container {
+  position: absolute;
+  margin-top: -180px;
+  padding: 0 10px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
   max-width: 1200px;
   height: auto;
   text-align: center;
+}
+main .location-section .location-container .wrap__dess {
+  box-shadow: 10px 0px 25px rgba(3, 3, 3, 0.2);
+  background-color: #fff;
+  width: 100%;
   display: flex;
   align-items: start;
   justify-content: space-between;
+  overflow: hidden;
+  border-radius: 10px;
+}
+main .location-section .location-container .wrap__dess .wrap__map {
+  width: 50%;
+}
+main .location-section .location-container .wrap__dess .wrap__map .map {
+  width: 100%;
+}
+main .location-section .location-container .wrap__dess .wrap__desc {
+  padding: 61px 25px 40px 76px;
+  width: 50%;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__content h1 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  text-align: start;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress {
+  display: flex;
+  flex-direction: column;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item {
+  width: 100%;
+  display: flex;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item h3 {
+  text-align: start;
+  width: 25%;
+  font-size: 16px;
+  margin-bottom: 20px;
+  line-height: 30px;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content {
+  max-width: 234px;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content p {
+  text-align: justify;
+  font-size: 14px;
+  color: #231f20;
+  margin-bottom: 1.5em;
+  font-weight: 400;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content p a:hover {
+  color: red;
+  transition: var(--animiation);
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .box__btn {
+  width: 150px;
+  margin-top: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  border-radius: 30px;
+  gap: 10px;
+  padding: 5px 5px 5px 30px;
+  background: red;
+  color: #fff;
+  cursor: pointer;
+}
+main .location-section .location-container .wrap__dess .wrap__desc .box__ress .box__btn .button__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15px;
+  height: 15px;
+  padding: 10px;
+  size: 10px;
+  background-color: #fff;
+  color: var(--mainRed);
+  border-radius: 50%;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -277,6 +365,9 @@ main .location-section .location-container {
   main .contact-section .contact-container .wrap__dess .box__img img {
     object-fit: cover;
     height: 100%;
+  }
+  main .location-section .location-container {
+    max-width: 960px;
   }
 }
 @media only screen and (max-width: 1023px) {
@@ -315,8 +406,11 @@ main .location-section .location-container {
     object-fit: cover;
     height: 100%;
   }
+  main .location-section .location-container .wrap__dess .wrap__desc .box__content h1 {
+    font-size: 25px;
+  }
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 790px) {
   main .centralOffice-section {
     padding-top: 60px;
   }
@@ -349,5 +443,34 @@ main .location-section .location-container {
     width: 100%;
     object-fit: cover;
     height: 100%;
+  }
+  main .location-section {
+    height: 825px;
+  }
+  main .location-section .location-container {
+    max-width: 824px;
+  }
+  main .location-section .location-container .wrap__dess {
+    flex-wrap: wrap;
+  }
+  main .location-section .location-container .wrap__dess .wrap__map {
+    width: 100%;
+  }
+  main .location-section .location-container .wrap__dess .wrap__desc {
+    width: 100%;
+    padding: 30px;
+  }
+  main .location-section .location-container .wrap__dess .wrap__desc .box__content h1 {
+    margin-bottom: 30px;
+    font-size: 25px;
+  }
+  main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item + .item {
+    border-top: 1px solid #bbbbbb;
+  }
+  main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item h3 {
+    margin-bottom: 10px;
+  }
+  main .location-section .location-container .wrap__dess .wrap__desc .box__ress .item .content p {
+    margin-bottom: 10px;
   }
 }/*# sourceMappingURL=contact.css.map */
