fix responsive carousel

--- a/Sass/program.scss
+++ b/Sass/program.scss
@@ -1,12 +1,13 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Condensed", sans-serif;
 }
-img{
-    max-width: 100%;
-    height: auto;
-    object-fit: contain;
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 .grid__container {
   // margin-left: auto;
@@ -218,7 +219,7 @@ img{
             .number {
               font-size: 110px;
               color: rgba(255, 255, 255, 0.4);
-              //   font-family: "000 SignLanguage TB";
+              font-family: "000 SignLanguage TB";
               line-height: 1;
             }
             .text__wrap {
@@ -266,66 +267,115 @@ img{
           position: absolute;
           //   margin-left: -10%;
         }
-        
-        .lessons__wrap {
-            width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            .slick-pre,
-            .slick-next {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              border: none;
-              position: absolute;
-              top: calc(50% - 25px);
-              background-color: #092f46;
-              .fa-arrow-left,
-              .fa-arrow-right {
-                color: #fff;
-              }
-              z-index: 1;
-            }
-  
-            .slick-pre {
-              left: 10px;
-            }
-            .slick-next {
-              right: 10px;
-            }
-  
-            .slick-pre:hover,
-            .slick-next:hover {
-              cursor: pointer;
-              background-color: #b11116;
-              box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-              -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-              -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
-            }
-            .slick-list{
-                width: 100%;
-                
-                .slick-track{
-                    width: 100%;
-                .lesson + .lesson{
-                    margin-right: 20px;
-                }
-                    .lesson {
-                      display: flex;
-                      justify-content: center;
-                      align-items: center;
-                      flex-direction: column;
-                      width: 18rem;
-                      height: 28rem;
-                      background-color: #fff;
-                      border: solid 0.001px #d2d1d1;
-                      border-radius: 20px;
-                      padding: 42px 44px 38px 34px;
-                      gap: 40px;
-                    }
 
-                }
+        .lessons__wrap {
+          width: 90%;
+          margin-left: auto;
+          margin-right: auto;
+          .lesson-2,
+          .lesson-4,
+          .lesson-6,
+          .lesson-8 {
+            box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+            -webkit-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+            -moz-box-shadow: 0px 10px 5px -1px rgba(237, 28, 36, 1);
+          }
+
+          .lesson-1,
+          .lesson-3,
+          .lesson-5,
+          .lesson-7 {
+            box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+            -webkit-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+            -moz-box-shadow: 0px 10px 5px -1px rgba(177, 17, 22, 1);
+          }
+          .lesson-3,
+          .lesson-7 {
+            h4 {
+              margin-bottom: 8px;
             }
+          }
+          .lesson-4,
+          .lesson-8 {
+            h4 {
+              margin-top: 50px;
+            }
+          }
+          .lesson-1,
+          .lesson-5 {
+            h4 {
+              margin-top: 25px;
+            }
+          }
+          .lesson-2,
+          .lesson-6 {
+            h4 {
+              margin-top: 25px;
+            }
+          }
+          .slick-pre,
+          .slick-next {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            border: none;
+            position: absolute;
+            top: calc(50% - 25px);
+            background-color: #092f46;
+            .fa-arrow-left,
+            .fa-arrow-right {
+              color: #fff;
+            }
+            z-index: 1;
+          }
+
+          .slick-pre {
+            left: 10px;
+          }
+          .slick-next {
+            right: 10px;
+          }
+
+          .slick-pre:hover,
+          .slick-next:hover {
+            cursor: pointer;
+            background-color: #b11116;
+            box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            -webkit-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+            -moz-box-shadow: 1px 0px 28px -2px rgba(177, 17, 22, 0.75);
+          }
+          .slick-list {
+            width: 100%;
+
+            .slick-track {
+              width: 100%;
+              padding: 27px;
+              .lesson + .lesson {
+                margin-right: 20px;
+              }
+              .lesson {
+                display: flex;
+                justify-content: center;
+                align-items: start;
+                flex-direction: column;
+                width: 100%;
+                height: 28rem;
+                background-color: #fff;
+                // border: solid 0.001px #d2d1d1;
+                border-radius: 20px;
+                padding: 42px 44px 38px 34px;
+                gap: 40px;
+                .title {
+                  font-size: 1.25rem;
+                }
+                h4 {
+                  text-align: start;
+                  color: #ed1c24;
+                  font-size: 2rem;
+                }
+              }
+            }
+          }
         }
       }
     }
@@ -716,15 +766,13 @@ img{
         }
       }
 
-      .lessons{
-        .lessons__container{
-            
-            .lessons__wrap{
-                width: 100%;
+      .lessons {
+        .lessons__container {
+          .lessons__wrap {
+            width: 100%;
             margin-left: 0;
             margin-right: 0;
-            }
-
+          }
         }
       }
 
@@ -804,7 +852,7 @@ img{
           h2 {
             left: 12px;
             padding: 0 40% 0 0;
-            font-size: 1.5rem;
+            font-size: 2rem;
           }
         }
       }
@@ -859,6 +907,29 @@ img{
                 }
                 .time {
                   font-size: 0.75rem;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .lessons {
+        .lessons__container {
+          .lessons__wrap {
+            .slick-list {
+              .slick-track {
+                .lesson {
+                  padding: 21px 16px 17px 25px;
+                  height: 19rem;
+                  gap: 0;
+
+                  .title {
+                    font-size: 1rem;
+                  }
+                  h4 {
+                    font-size: 1.15rem;
+                  }
                 }
               }
             }
