--- a/Sass/responsiveRecruitment.scss
+++ b/Sass/responsiveRecruitment.scss
@@ -165,21 +165,27 @@
       display: none;
     }
     tbody {
+      width: 100%;
       tr {
-        padding: 0 50px;
+        width: 100%;
         border: 1px solid #333333 !important;
+        padding: 0;
         display: flex;
-        flex-direction: column;
+        justify-content: end;
+        text-align: center;
         &:not(:last-child) {
           margin-bottom: 30px;
         }
         td::before {
           position: absolute;
-          left: 10px;
+          left: 15px;
           width: 35%;
           text-align: left;
         }
         td {
+
+          margin-left: auto;
+          width: 100%;
           position: relative;
           &:nth-child(1) {
             padding: 10px 137px 10px 378px;
