--- a/css/responsiveRecruitment.css
+++ b/css/responsiveRecruitment.css
@@ -143,22 +143,29 @@
   .job thead {
     display: none;
   }
+  .job tbody {
+    width: 100%;
+  }
   .job tbody tr {
-    padding: 0 50px;
+    width: 100%;
     border: 1px solid #333333 !important;
+    padding: 0;
     display: flex;
-    flex-direction: column;
+    justify-content: end;
+    text-align: center;
   }
   .job tbody tr:not(:last-child) {
     margin-bottom: 30px;
   }
   .job tbody tr td::before {
     position: absolute;
-    left: 10px;
+    left: 15px;
     width: 35%;
     text-align: left;
   }
   .job tbody tr td {
+    margin-left: auto;
+    width: 100%;
     position: relative;
   }
   .job tbody tr td:nth-child(1) {
