--- a/css/contact.css
+++ b/css/contact.css
@@ -25,7 +25,8 @@ body p {
   line-height: 30px;
 }
 body img {
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
   max-width: 100%;
   height: auto;
 }
@@ -45,6 +46,7 @@ main section {
 }
 main .contactBanner-section {
   display: flex;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main .contactBanner-section .box__img {
@@ -52,10 +54,12 @@ main .contactBanner-section .box__img {
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main .contactBanner-section .box__img img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
 }
 main .contactBanner-section .banner__side {
@@ -70,6 +74,7 @@ main .contactBanner-section .banner__side .nav {
   bottom: 0;
   left: 75%;
   position: absolute;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   background-color: transparent;
@@ -80,6 +85,7 @@ main .contactBanner-section .banner__side .nav {
 }
 main .contactBanner-section .banner__side .nav .box__content {
   background-color: transparent;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main .contactBanner-section .banner__side .nav .box__content p {
@@ -363,7 +369,8 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
     height: 100%;
   }
   main .contact-section .contact-container .wrap__dess .box__img img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     height: 100%;
   }
   main .location-section .location-container {
@@ -403,7 +410,8 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
     height: 100%;
   }
   main .contact-section .contact-container .wrap__dess .box__img img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     height: 100%;
   }
   main .location-section .location-container .wrap__dess .wrap__desc .box__content h1 {
@@ -425,6 +433,7 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
     max-width: 824px;
   }
   main .contact-section .contact-container .wrap__dess {
+    height: -moz-fit-content;
     height: fit-content;
     flex-direction: column;
   }
@@ -441,7 +450,8 @@ main .location-section .location-container .wrap__dess .wrap__desc .box__ress .b
   }
   main .contact-section .contact-container .wrap__dess .box__img img {
     width: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     height: 100%;
   }
   main .location-section {
