--- a/css/recruitment.css
+++ b/css/recruitment.css
@@ -10,6 +10,7 @@
 .banner {
   display: flex;
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .banner .box__img {
@@ -17,7 +18,8 @@
   height: 100%;
 }
 .banner .box__img img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -33,6 +35,7 @@
   bottom: 0;
   left: 75%;
   position: absolute;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   background-color: transparent;
@@ -43,6 +46,7 @@
 }
 .banner .banner__side .nav .box__content {
   background-color: transparent;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .banner .banner__side .nav .box__content p {
@@ -214,6 +218,7 @@
 }
 .job .jon-container .box__table {
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .job .jon-container .box__table table {
