--- a/css/footer.css
+++ b/css/footer.css
@@ -56,6 +56,7 @@
   text-transform: uppercase;
 }
 .footer__last .footer__information .contactWith {
+  width: -moz-fit-content;
   width: fit-content;
 }
 .footer__last .footer__information .contactWith .des {
@@ -91,6 +92,7 @@
   .footer__last .footer__information .quickLinks,
   .footer__last .footer__information .studyProgram,
   .footer__last .footer__information .contactWith {
+    width: -moz-fit-content;
     width: fit-content;
   }
 }
