--- a/css/homepage.css
+++ b/css/homepage.css
@@ -24,7 +24,8 @@ body p {
   line-height: 30px;
 }
 body img {
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
   max-width: 100%;
 }
 body h1 {
@@ -44,11 +45,13 @@ main .section {
   height: 100%;
 }
 main .sliderShow-section {
+  height: -moz-fit-content;
   height: fit-content;
 }
 main .sliderShow-section .category__item {
   position: relative;
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main .sliderShow-section .slick-dots {
@@ -145,6 +148,7 @@ main .presentation-section .presentation-container .box__content .box__content-b
 }
 main .presentation-section .warp__first {
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
   background-color: #fff;
   display: flex;
@@ -337,6 +341,7 @@ main .newAndEvent-section .grid__container .box__grid-main {
 main .newAndEvent-section .grid__container .box__grid {
   position: relative;
   width: 25%;
+  height: -moz-fit-content;
   height: fit-content;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
@@ -380,7 +385,8 @@ main .newAndEvent-section .grid__container .box__grid .box__img {
   border-radius: 14px;
 }
 main .newAndEvent-section .grid__container .box__grid .box__img img {
-  object-fit: none;
+  -o-object-fit: none;
+     object-fit: none;
   width: 712px;
   height: 397px;
 }
@@ -423,6 +429,7 @@ main .thinkAbout__section {
 }
 main .thinkAbout__section .thinkAbout__content {
   width: 60%;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   align-items: center;
@@ -439,6 +446,7 @@ main .thinkAbout__section .thinkAbout__content h1 {
 main .thinkAbout__section .thinkAbout__category {
   background-color: blue;
   width: 100%;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   align-items: center;
@@ -486,6 +494,7 @@ main .thinkAbout__section .thinkAbout__category .slick-track .category__item .bo
   border-radius: 50%;
 }
 main .thinkAbout__section .thinkAbout__category .slick-track .category__item .box__content {
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   align-items: center;
@@ -590,6 +599,7 @@ main .system-section .box__content-right .box__items .item .counter {
   main .presentation-section .presentation-container {
     margin-bottom: 100px;
     display: block;
+    height: -moz-fit-content;
     height: fit-content;
   }
   main .presentation-section .presentation-container .box__img {
@@ -609,6 +619,7 @@ main .system-section .box__content-right .box__items .item .counter {
   }
   main .presentation-section .warp__last {
     margin-bottom: 50px;
+    height: -moz-fit-content;
     height: fit-content;
     display: block;
   }
@@ -621,6 +632,7 @@ main .system-section .box__content-right .box__items .item .counter {
     width: 100%;
   }
   main .studyProcess-section {
+    height: -moz-fit-content;
     height: fit-content;
   }
   main .studyProcess-section .processBox__content {
@@ -699,6 +711,7 @@ main .system-section .box__content-right .box__items .item .counter {
     font-size: 1em !important;
   }
   main .presentation-section .warp__last .box__content {
+    height: -moz-fit-content;
     height: fit-content;
   }
   main .studyProcess-section {
@@ -706,6 +719,7 @@ main .system-section .box__content-right .box__items .item .counter {
   }
   main .studyProcess-section .processBox__content {
     width: 100%;
+    height: -moz-fit-content;
     height: fit-content;
   }
   main .studyProcess-section .processBox__content h1 {
@@ -720,6 +734,7 @@ main .system-section .box__content-right .box__items .item .counter {
   }
   main .thinkAbout__section .thinkAbout__content {
     padding: 0px 10px;
+    height: -moz-fit-content;
     height: fit-content;
     width: 100%;
   }
