--- a/css/register.css
+++ b/css/register.css
@@ -15,7 +15,8 @@
 .register--img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .register--form {
   position: absolute;
@@ -23,6 +24,7 @@
   inset: 50%;
   transform: translate(-50%, -50%);
   width: 85%;
+  height: -moz-fit-content;
   height: fit-content;
   padding: 50px;
   padding-bottom: 110px;
@@ -60,6 +62,10 @@
   border-radius: 20px;
   outline: none;
   color: white;
+}
+.register--form--listInput input::-moz-placeholder {
+  color: white;
+  opacity: 1;
 }
 .register--form--listInput input::placeholder {
   color: white;
