--- a/css/responsiveRecruitment.css
+++ b/css/responsiveRecruitment.css
@@ -12,16 +12,20 @@
     background-size: cover;
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
   .hero .hero__content {
     width: 100%;
     height: 100%;
   }
   .hero .hero__content p {
-    width: 100%;
+    width: -moz-fit-content;
+    width: fit-content;
     height: 100%;
-    font-size: 16px;
+    font-size: 14px;
     margin-left: 10px;
+    text-align: justify;
+    margin-right: 14px;
   }
   .hero h2 {
     width: 100%;
@@ -37,10 +41,6 @@
     height: 100%;
   }
   .hero .hero__content {
-    width: 100%;
-    height: 100%;
-  }
-  .hero .hero__content p {
     width: 100%;
     height: 100%;
   }
