--- a/Sass/method.scss
+++ b/Sass/method.scss
@@ -255,6 +255,71 @@ main {
       }
     }
   }
+  .route-section {
+    padding: 50px 0 0;
+    .route-container {
+      .route__content {
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 30px;
+        text-align: center;
+        h1 {
+          font-size: 40px;
+          font-weight: 1000;
+          margin-bottom: 30px;
+        }
+      }
+      .wrap__dess {
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .item {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: calc((100% / 3) - 56px);
+          padding: 32px 38px 50px;
+          margin: 0 28px;
+          .box__img,
+          p {
+            margin-bottom: 30px;
+          }
+          p {
+            height: 160px;
+            text-align: center;
+            font-size: 14px;
+            max-width: 272px;
+            margin-bottom: 10px;
+            line-height: 26px;
+            font-weight: 300;
+          }
+          .box__btn {
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            border-radius: 30px;
+            gap: 10px;
+            padding: 5px 5px 5px 30px;
+            background: red;
+            color: #fff;
+            cursor: pointer;
+            .button__icon {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 35px;
+              height: 35px;
+              size: 10px;
+              background-color: #fff;
+              color: var(--mainRed);
+              border-radius: 50%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media only screen and (max-width: 1023px) {
   main {
@@ -305,6 +370,36 @@ main {
           }
           p {
             font-size: 13px;
+          }
+        }
+      }
+    }
+    .route-section {
+      .route-container {
+        .route__content {
+          h1 {
+          }
+        }
+        .wrap__dess {
+          justify-content: center;
+          .item {
+            justify-content: center;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            .box__img {
+              max-width: 400px;
+              min-width: 200px;
+            }
+            .box__content {
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              p {
+                max-width: 400px;
+                max-height: 100px;
+              }
+            }
           }
         }
       }
